--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Triangle</title>
 </head>
 <body>
+    <button class="btn nav-fixed" onclick="window.location.href='triangle.html'">Fixed Program</button>
     <div class="triangle-wrapper">
         <input type="number" id="sideA" placeholder="Side A">
         <input type="number" id="sideB" placeholder="Side B">
