--- a/triangle.html
+++ b/triangle.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+        <button class="btn nav-unfixed" onclick="window.location.href='index.html'">Unfixed Program</button>
     <div class="triangle-wrapper">
         <input type="number" id="sideA" placeholder="Side A">
         <input type="number" id="sideB" placeholder="Side B">
